--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My first Github Repo</title>
 </head>
 <body>
-    
+    <h1>Welcome to the GitHub world.</h1>
+    <p>This is an attempt to learn the operation of Github.</p>
 </body>
 </html>
