--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to the GitHub world.</h1>
     <p>This is an attempt to learn the operation of Github.</p>
+    <p>So far it seems very confusing.</p>
 </body>
 </html>
