--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to the GitHub world.</h1>
     <p>This is an attempt to learn the operation of Github.</p>
     <p>So far it seems very confusing.</p>
+    <p>successfully pushed extra code.</p>
 </body>
 </html>
